[package]
name = "vec-vp-tree"
version = "0.1.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A vantage-point tree implementation backed by vectors for performance."
repository = "https://github.com/abonander/vec-vp-tree"
keywords = ["vantage", "point", "tree", "nearest", "neighbor"]

documentation = "http://docs.rs/vec-vp-tree/"

license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.3"

[dependencies.strsim]
version = "0.5"
optional = true

[features]
default = ["strsim"]